# cryptic-sequence-concept

./: .gitignore  .gitmodules  CITATION.cff  Dockerfile  README.md  add_user.py  explore_additive.ipynb  explore_agnostic.ipynb  explore_epistasis.ipynb  index.ipynb  launch_app.sh  plot_negbinom_effectsize_variance_sensitivity.ipynb  purge_testing.py  purge_work.py  pyproject.toml  request_api_token.py  requirements.in  requirements.txt
.github/workflows/: CI.yml  ci.yaml
binder/: README.md  explore_additive.ipynb  explore_agnostic.ipynb  explore_epistasis.ipynb  plot_negbinom_effectsize_variance_sensitivity.ipynb
containers/simpleAdditive/: build.sh  knockem_compete_two.sh
containers/simpleAdditiveSLURM/: Dockerfile  knockem  knockem_apply_knockout.sh  knockem_compete_two.sh  knockem_count_sites.sh
cpp/: Makefile  package.json
cpp/source/: native.cpp  web.cpp
cpp/tests/: example.cpp
cpp/web/: cryptic-sequence-concept.html  index.html
docs/: LICENSE  conf.py  contributing.md  installation.md  usage.md
knockem/: __init__.py  app.py  app.py.openapi.yaml  cli.py
knockem/analysis/: __init__.py  _score_competition.py
knockem/auxlib/: _is_slurm_job.py
knockem/cli/: __main__.py  _cleanup_genome.py  _fetch_genome.py  _forward_to_slurm.py  _report_competition.py
knockem/common/: meta.py  records.py
knockem/container/: __init__.py  _apply_knockout.py  _compete_two.py  _count_sites.py  _get_env_from_document.py  _pack_env_args.py  _warm_image_cache.py
knockem/service/: __init__.py  main.py  openapi.yaml  orchestration.py  records.py
pylib/analyze_additive/: __init__.py  _assay_additive_naive.py  _fit_negbinom_quantiles.py  _pick_doses_extrema.py  _sample_knockout.py
pylib/analyze_agnostic/: __init__.py  _assay_agnostic_naive.py
pylib/analyze_epistasis/: __init__.py  _assay_epistasis_naive.py  _describe_skeletons.py  _jackknife_skeleton.py  _skeletonize_naive.py
pylib/auxlib/: _IrwinHallDistribution.py  _argunsort.py  _cumcount.py  _dfill.py  _discrete_geomspace.py  _jackknife_mark_recapture_estimate.py  _jitter.py  _nbinom_cdf.py  _nonzero.py  _nunique.py
pylib/modelsys_explicit/: _CalcKnockoutEffectsAdditive.py  _GenomeExplicit.py  (+7 more)
spec/: components.md  containerAPI.md  schema.md
tex/: .gitignore  Dockerfile  bibl.bib  main.tex
tidy/: test_make_clean.sh
(+69 files in other folders)
